--- a/manual/Makefile
+++ b/manual/Makefile
@@ -24,3 +24,11 @@ help:
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
+SUBDIRS = source
+
+.PHONY: subdirs $(SUBDIRS)
+
+clean ::
+	$(MAKE) clean -C $(SUBDIRS)
+	$(MAKE) clean -C $(BUILDDIR)
