--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -1,8 +1,8 @@
 name: Generate Webpage
 
 on:
-  pull_request:
-    branches: [ master ]
+  #pull_request:
+  #  branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -75,11 +75,16 @@ jobs:
       #  run: |
       #    ./oscovida/tools/oscovida.github.io/post-generate.sh
   
-      - name: Update pip and install sphinx and required tools to create static HTML pages
+      - name: Update pip and install sphinx and required tools
         run: |
           pip install --upgrade pip
-          pip install sphinx
-          pip install pyresttools
+          pip install sphinx sphinx_comments pyresttable
+      
+      - name: Pull the state of the repository, use sphinx to compile static html pages
+        run: |
+          git clone https://github.com/Tommaso-Pincelli/definitions.git
+          cd definitions
+          make all
 
      #- name: Update HTML pages
      #   run: |
