--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -78,13 +78,19 @@ jobs:
       - name: Update pip and install sphinx and required tools
         run: |
           pip install --upgrade pip
-          pip install lxml Sphinx pyRestTable six
+          pip install lxml Sphinx sphinx_comments pyRestTable six
       
-      - name: Pull the state of the repository, use sphinx to compile static html pages
+      - name: Pull the state of the repository
         run: |
           git clone https://github.com/Tommaso-Pincelli/definitions.git
           cd definitions
+
+      - name: Use sphinx to compile static html pages
           make all
+          ls definitions/manual/build/html
+          
+      - name: Push these changes to the repo from which gitpages takes the static html pages
+          echo "Implement this!"
 
      #- name: Update HTML pages
      #   run: |
