--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -80,19 +80,27 @@ jobs:
           pip install --upgrade pip
           pip install lxml Sphinx sphinx_comments pyRestTable six
         
-      - name: Pull the state of the repository
+      - name: Pull the state of the source repo, i.e. the one with the rst source code
         run: |
-          echo $GITHUB_WORKSPACE
+          echo $GITHUB_WORKSPACE 
+          git clone https://github.com/Tommaso-Pincelli/definitions.git
+          cd definitions
           make all
           echo $PWD
-          ls $GITHUB_WORKSPACE/definitions/manual/build/html
-      #   git clone https://github.com/Tommaso-Pincelli/definitions.git
-      #   cd definitions
-
-      - name: Push these changes to the repo from which gitpages takes the static html pages
+          #ls $GITHUB_WORKSPACE/definitions/manual/build/html
+          
+      - name Pull the state of the target repo, i.e. the one where static html pages should be placed
         run: |
-          echo $PWD
-          echo "Implement this!"
+          cd $GITHUB_WORKSPACE
+          git clone https://github.com/mkuehbach/definitions.github.io.git
+          ls $GITHUB_WORKSPACE
+          cd docs
+          cp -R $GITHUB_WORKSPACE/definitions/manual/build/html $GITHUB_WORKSPACE/xxx/docs
+          ##currently in the target repo
+          #git add .
+          #git commit -m "updated"
+          #git push
+          #echo "Implement this!"
 
      #- name: Update HTML pages
      #   run: |
