--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -82,23 +82,19 @@ jobs:
         
       - name: Pull the state of the source repo, i.e. the one with the rst source code
         run: |
-          echo $GITHUB_WORKSPACE
+          cd $GITHUB_WORKSPACE
           mkdir -p source
           cd source
           git clone https://github.com/Tommaso-Pincelli/definitions.git
-          ls $PWD
           cd definitions
-          echo $PWD
           make all
-          echo $PWD
+          #echo $PWD
           #ls $GITHUB_WORKSPACE/definitions/manual/build/html
           cd $GITHUB_WORKSPACE
           mkdir -p target
           cd target
           git clone https://github.com/mkuehbach/definitions.github.io.git
-          ls $PWD
-          cd docs
-          echo $PWD
+          cd definitions.github.io/docs
           cp -R $GITHUB_WORKSPACE/target/definitions/manual/build/html $GITHUB_WORKSPACE/source/docs
           ##currently in the target repo
           #git add .
