--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -102,7 +102,9 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add .
+          #git status
           git commit -m "updated"
+          git status
           git push
 
      #- name: Update HTML pages
