--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -86,21 +86,23 @@ jobs:
           mkdir -p source
           cd source
           ls $PWD
-          git clone https://github.com/Tommaso-Pincelli/definitions.git
+          #git clone https://github.com/Tommaso-Pincelli/definitions.git
+          git clone git@github.com:Tommaso-Pincelli/definitions.git
           cd definitions
           make all
           cd $GITHUB_WORKSPACE
           mkdir -p target
           cd target
           ls $PWD
-          git clone https://github.com/mkuehbach/definitions.github.io.git
+          #git clone https://github.com/mkuehbach/definitions.github.io.git
+          git clone git@github.com:mkuehbach/definitions.github.io.git
           cd definitions.github.io/docs
           echo "Carrying changes over to local version of the repo!"
           cp -R $GITHUB_WORKSPACE/source/definitions/manual/build/html $GITHUB_WORKSPACE/target/definitions.github.io/docs
           ##currently in the target repo
           ls $PWD
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          #git config --local user.email "action@github.com"
+          #git config --local user.name "GitHub Action"
           git add .
           #git status
           git commit -m "updated"
