--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -18,6 +18,7 @@ jobs:
           #persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
           #fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
       - name: Update pip and install sphinx and required tools to create static HTML pages with sphinx
+        uses: actions/checkout@v2
         run: |
           echo $GITHUB_WORKSPACE
           pip install --upgrade pip
