--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -89,16 +89,16 @@ jobs:
           mkdir -p source
           cd source
           ls $PWD
-          #git clone https://github.com/Tommaso-Pincelli/definitions.git
-          git clone git@github.com:Tommaso-Pincelli/definitions.git
+          git clone https://github.com/Tommaso-Pincelli/definitions.git
+          #git clone git@github.com:Tommaso-Pincelli/definitions.git
           cd definitions
           make all
           cd $GITHUB_WORKSPACE
           mkdir -p target
           cd target
           ls $PWD
-          #git clone https://github.com/mkuehbach/definitions.github.io.git
-          git clone git@github.com:mkuehbach/definitions.github.io.git
+          git clone https://github.com/mkuehbach/definitions.github.io.git
+          #git clone git@github.com:mkuehbach/definitions.github.io.git
           cd definitions.github.io/docs
           echo "Carrying changes over to local version of the repo!"
           cp -R $GITHUB_WORKSPACE/source/definitions/manual/build/html $GITHUB_WORKSPACE/target/definitions.github.io/docs
