--- a/.github/workflows/update-manual.yml
+++ b/.github/workflows/update-manual.yml
@@ -104,16 +104,19 @@ jobs:
           cp -R $GITHUB_WORKSPACE/source/definitions/manual/build/html $GITHUB_WORKSPACE/target/definitions.github.io/docs
           ##currently in the target repo
           ls $PWD
-          git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "<>"
-          #git config --local user.email "$GITHUB_EMAIL"
-          #git config --local user.name "$GITHUB_USERNAME"
+          #git config --global user.name "GitHub Actions Bot"
+          #git config --global user.email "<>"
+          echo $GITHUB_EMAIL
+          echo $GITHUB_USERNAME
+          echo ${{ github.actor }}
+          git config --global user.email "$GITHUB_EMAIL"
+          git config --global user.name "$GITHUB_USERNAME"
           git remote -v
           git remote set-url origin git@github.com:/mkuehbach/definitions.github.io.git
           git remote -v
           git add .
           #git status
-          git commit -m "Auto-committed through Tommaso-Pincelli/definitions.git"
+          git commit -m "Auto-committed through by tommaso pincelli's definitions git repo"
           git status
           git push
 
